# smile

./: AGENTS.md
serve/: AGENT-MODE.md  build.gradle.kts
studio/: AGENTS.md  CONTEXT.md  run.sh  ux-research.html
studio/app/: .gitignore  DOCKVIEW-NOTES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
studio/app/src/: App.test.tsx  App.tsx  README.md  styles.css
studio/app/src-tauri/: Cargo.toml  tauri.conf.json
studio/app/src-tauri/capabilities/: default.json
studio/app/src-tauri/src/: lib.rs  main.rs
studio/app/src-tauri/tests/: contract_conformance.rs
studio/contract/: README.md  package-lock.json  package.json  tsconfig.json  verify.sh
studio/contract/schema/: ColumnTable.json  DaemonInfo.json  DaemonMessage.json  DatasetInfo.json  ExecResult.json  LlmConfig.json  LoadedDataset.json  SaveRequest.json  SqlError.json  SqlRequest.json  StagedDataset.json  TableInfo.json  TablesResponse.json  WebviewReply.json
studio/contract/scripts/: gen-schema.ts
studio/contract/src/: daemonMessage.ts  index.ts  rest.ts  tauri.ts  validate.ts
studio/contract/test/: goldenFrames.test.ts
studio/docs/: AGENTIC-REFINEMENT-PROPOSAL.md  IMPLEMENTATION-PLAN.md  PRD-explorable-automl-cockpit.md  PRODUCTION-PLAN.md  TAURI-TESTING-STRATEGY.md  UX-REVAMP.md  UX-SELF-REVIEW.md
studio/docs/adr/: 0001-tauri-shell-over-single-jvm-daemon.md  0002-transport-websocket-arrow-channels.md  0003-autopilot-orchestrator.md  0004-leaderboard-scoring-contract.md  0005-automl-is-an-agent-skill-not-a-backend-orchestrator.md  0015-one-command-dev-launcher.md  (+11 more)
(+164 files in other folders)
