[package]
name = "smile-studio"
version = "0.0.0"
description = "Smile Studio — agentic-first AutoML desktop app"
edition = "2021"

[lib]
name = "smile_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.3"
tauri-plugin-dialog = "2"

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
